--- a/app/src/main/res/layout/activity_give_exam_or_read_questions.xml
+++ b/app/src/main/res/layout/activity_give_exam_or_read_questions.xml
@@ -100,7 +100,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
         android:id="@+id/view"
-        android:background="@color/background"
+        ></View>
 
 
     <androidx.recyclerview.widget.RecyclerView
