--- a/app/src/main/res/layout/activity_give_exam_or_read_questions.xml
+++ b/app/src/main/res/layout/activity_give_exam_or_read_questions.xml
@@ -105,7 +105,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/readQuestionListRecycler"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -119,7 +119,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintTop_toBottomOf="@id/view"
         >
 
@@ -296,7 +296,7 @@
                                         android:text="This is option one"
                                         android:background="@drawable/department_clicked_null_back"
                                         android:padding="@dimen/_6sdp"
-                                        android:textColor="@color/black_textColor"
+                                        android:textColor="@color/black"
                                         android:layout_marginBottom="@dimen/_10sdp"
                                         android:textSize="@dimen/_18sdp"
                                         android:inputType="textMultiLine"
@@ -310,7 +310,7 @@
                                         android:text="This is option one..................."
                                         android:background="@drawable/department_clicked_null_back"
                                         android:padding="@dimen/_6sdp"
-                                        android:textColor="@color/black_textColor"
+                                        android:textColor="@color/black"
                                         android:layout_marginBottom="@dimen/_10sdp"
                                         android:textSize="@dimen/_18sdp"
                                         android:inputType="textMultiLine"
@@ -324,7 +324,7 @@
                                         android:text="This is option one..................."
                                         android:background="@drawable/department_clicked_null_back"
                                         android:padding="@dimen/_6sdp"
-                                        android:textColor="@color/black_textColor"
+                                        android:textColor="@color/black"
                                         android:layout_marginBottom="@dimen/_10sdp"
                                         android:textSize="@dimen/_18sdp"
                                         android:inputType="textMultiLine"
@@ -338,7 +338,7 @@
                                         android:text="This is option one..................."
                                         android:background="@drawable/department_clicked_null_back"
                                         android:padding="@dimen/_6sdp"
-                                        android:textColor="@color/black_textColor"
+                                        android:textColor="@color/black"
                                         android:layout_marginBottom="@dimen/_10sdp"
                                         android:textSize="@dimen/_18sdp"
                                         android:inputType="textMultiLine"
@@ -357,7 +357,8 @@
                     android:id="@+id/submitAns"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_40sdp"
-                    android:text="Submit Ans"
+                    android:text="Submit Answer"
+                    android:textColor="@color/black"
                     android:textAllCaps="false"
                     android:textSize="@dimen/_18sdp"
                     android:layout_marginTop="@dimen/_10sdp"
